[package]
name = "globtest"
version = "0.1.0"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
description = "Test expressions against the glob library."
homepage = "https://github.com/neosmart/globtest"
repository = "https://github.com/neosmart/globtest"
readme = "README.md"
keywords = ["glob", "globset", "fnmatch"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
license = "MIT"

[dependencies]
clap = "2.25.0"
glob = "0.2.11"
