[package]
name = "globtest"
version = "0.1.1"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
description = "Test expressions against the glob library."
homepage = "https://github.com/neosmart/globtest"
repository = "https://github.com/neosmart/globtest"
readme = "README.md"
keywords = ["glob", "globset", "fnmatch"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
license = "MIT"

[dependencies]
clap = "2.31"
glob = "0.2"
